--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ __pycache__
 images-project-1
 exercise_8/flowers
 exercise_8/a_histograms
-exercise_8/b_images_distances.csv
+exercise_8/c_histograms
+**.csv
 **/desktop.ini
